frontend/src/components/SymbolsView/SymbolsGrid/symbolsGrid.css
.symbol-cards {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));

  grid-row-gap: 24px;
  grid-column-gap: 24px;

  /* Adds space for the trend image with position absolute */
  margin: 24px;
}

@media (min-width: 494px) {
  .symbol-cards {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

@media screen and (min-width: 724px) {
  .symbol-cards {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media screen and (min-width: 1024px) {
  .symbol-cards {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

@media screen and (min-width: 1190px) {
  .symbol-cards {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}

@media screen and (min-width: 1424px) {
  .symbol-cards {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }
}

